# warbler-backend

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: aws-oicd.yaml  pytests.yaml  python-app.yaml  python-app.yml
src/api/: main.py  modules.py
src/api/tests/: s3.py  test-aws.py  test_api.py  test_api_analyze_performane.py  test_api_basics.py
src/dynamics/: analyze_performance_test.py  calculate_db.py  expected_rms_generator_test.py  feedback.py
src/dynamics/mxl_test_files/: test10.mxl  test11.mxl  test7.mxl
src/dynamics/tests/: test_analyze_performance_.py  test_expected_rms_generator.py
src/pitch/: compare_pitch.py  main.py
src/pitch/test_files/: test12.mxl  test9.mxl
src/pitch/tests/: test_accuracy_check.py
src/tests/: test_basic.py
