[project]
name = "warbler-backend"
version = "0.1.0"
description = "Backend python package for MusicNU api endpoints and Python audio file analysis scripts"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
